@@ -29,6 +29,8 @@ Fixes:
  * Precise Team menu enablements must be disabled by default (bug 230461)
    + special thanks to Rafael Chaves, Pavel Zuev, Assaf Almaz
 
+ * Automatic project share makes more than one repository location for the same repository (bug 232649)
+
 --------------------------------------------------------------------------------
 
 Version 0.7.0.v20080425 [25 April 2008]
